2005-07-22  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/syntheth.c (synth_eth_init): Cast to keep the compiler
	happy.

2003-07-16  Gary Thomas  <gary@mlbassoc.com>

	* host/rawether.c: Change error reporting to use standard 'strerror()' 
	function since the use of sys_errlist[] is depricated.

2003-07-09  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.am: add a dummy install-data-hook if not
	supported.

	* host/Makefile.in, host/aclocal.m4, host/configure: regenerate

2003-05-06  Bart Veer  <bartv@ecoscentric.com>

	* host/ethernet.tcl (filters_initialize):
	Fix typo reported by Scott Wilkinson

2003-02-25  Iztok Zupet  <iz@vsr.si>

	* doc/syntheth.sgml: Replaced .gif with .png to get PDF
	output.
	* doc/overview.gif: delete.
	* doc/overview.png: add.

2003-04-08  Andrew Lunn  <lunn@londo>

	* host/rawether.c (tap_init): Set the persistent flag on the tap
	device if requested by the user. This allows dhcpd and radvd to
	keep running on the tap device between invocations of the synth
	target.	
	* doc/syntheth.sgml: Documentation for the persistent option.

2003-04-01  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/syntheth.c (synth_eth_init): Set the flag IFF_ALLMULTI when
	the underlying device supports multicast so eth_drv correctly sets
	mutlicast filtering.  
	* cdl/syntheth.cdl: This driver implements multicast.

2003-02-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/syntheth.sgml: Declare as <part> not <reference> to get
	correct TOC numbering.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/syntheth.cdl: Add doc link.

	* doc/syntheth.sgml: Comment out DOCTYPE for now to allow building
	with standard doc build.
	Add an enclosing <reference> so it's structured better with standard
	doc build.

2003-02-13  Bart Veer  <bartv@ecoscentric.com>

	* src/syntheth.c, cdl/syntheth.cdl: add dependency on errno.h for
	error codes, and avoid memset() warning

2003-02-12  Bart Veer  <bartv@ecoscentric.com>

	* host/Makefile.in, host/configure: